syntax="proto3";
option go_package = "./proto";

service RestaurantService {
    // Gets the items
   rpc GetItemsById(ItemIdList) returns (ItemList){}
   rpc GetRestaurantById(RestaurantId) returns (Restaurant) {}
}
message ItemIdList {
    repeated string itemId = 1;
}

message Item {
    string itemId = 1;
    string restaurantId = 2;
    string name = 3;
    string description = 4;
    double price = 5;
    bool invalid = 6;
}

message ItemList {
    repeated Item item = 1;
}

message RestaurantId {
    string restaurantId  = 1;
}

message Restaurant {
    string restaurantId = 1;
    string name  = 2;
    string ownerId = 3;
}

